# zero-context-protocol-python

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-smoke.yml  ci.yml  release.yml  secret-scan.yml
benchmark_reports/: README.md  zcp_mcp_tool_call_benchmark.json  zcp_mcp_tool_call_benchmark.md
benchmark_reports/full_semantic_compare_v5/: excel_llm_token_benchmark.json  excel_llm_token_benchmark.md  semantic_benchmark_summary.md
examples/: README.md  compare_excel_client_protocol_benchmark.py  compare_mcp_zcp_profiles.py  compare_zcp_mcp_tool_call_benchmark.py  deepseek_chat_tool_call_example.py  mcp_weather_server.py  run_mcp_tool_call_benchmark.py  run_zcp_api_server.py  run_zcp_mcp_stdio_server.py  run_zcp_tool_call_benchmark.py  weather_mcp_client.py  weather_mcp_server.py  weather_zcp_client.py  weather_zcp_server.py  zcp_mcp_gateway_demo.py  zcp_server_template.py  zcp_weather_server.py
scripts/: reproduce_public_benchmarks.sh
src/zcp/: __init__.py  auth.py  canonical_protocol.py  canonical_runtime.py  canonical_schema.py  capabilities.py  codec.py  config.py  gateway.py  http.py  mcp_stdio.py  observability.py  protocol.py  runtime.py  server.py  session.py  transport_runtime.py  transports.py
src/zcp/adapters/: __init__.py  openai.py
src/zcp/profiles/: __init__.py  mcp.py  native.py  oai.py
tests/: test_benchmark_harness.py  test_excel_llm_benchmark.py  test_mcp_stdio_contract.py  test_mcp_streamable_http_contract.py  test_mcp_websocket_contract.py  test_openai_adapter.py  test_runtime.py  test_schema.py  test_zcp_gateway.py  test_zcp_group_and_profiles.py  test_zcp_http.py  test_zcp_sdk.py  test_zcp_websocket.py
tools/: __init__.py  benchmarking.py  excel_benchmarking.py  excel_llm_benchmarking.py  real_sdk_mcp_server.py
tools/excel_benchmark_suites/: __init__.py  common.py  tier_a_single_tool.py  tier_b_tool_chains.py  tier_c_workflows.py  tier_d_autonomous_planning.py
